--- a/styles/info-pelicula.css
+++ b/styles/info-pelicula.css
@@ -30,7 +30,7 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
   z-index: 1;
   color: white;
 }
