--- a/styles/login-register.css
+++ b/styles/login-register.css
@@ -9,6 +9,10 @@ body{
 background: linear-gradient(to bottom, #000000 0%, #1a1a1a 100%);
 }
 
+header {
+    position: fixed;
+}
+
 p.p-desc {
     font-size: 1.125rem;
     width: 100%;
