--- a/styles/usuario.css
+++ b/styles/usuario.css
@@ -9,15 +9,14 @@ body {
     color: white;
     background: linear-gradient(to bottom, #000000 0%, #1a1a1a 100%);
     background-color: #000;
-    margin-top: 5%;
+    margin-top: 3%;
 }
 
 
 main {
-    height: 80vh;
     margin: 2rem ;
     padding: 2rem;
-    padding-top: 10rem;
+    padding-top: 1rem;
 }
 
 form {
@@ -105,6 +104,10 @@ form {
 }
 
 @media (max-width: 768px)  {
+    main {
+        padding-top: 0;
+        width: 80%;
+    }
     .header {
         display: flex;
         position: fixed;
@@ -127,7 +130,7 @@ form {
     }
 
     form {
-        grid-template-columns: 100%;
+        grid-template-columns: 90%;
     }
 
     .perfil {
@@ -151,6 +154,15 @@ form {
     .acionesFormulario {
         grid-column: 1 / -1;
     }
+    footer{
+        grid-template-columns: 90%;
+    }
+    .alumnos{
+    grid-column-start: auto;
+    }
+    .contenedor-redes{
+    grid-column-start: auto;
+    }
 }
 
 @media (max-width: 425px)  {
@@ -168,7 +180,7 @@ form {
 
     .header nav ul{
         display: flex;
-        gap: .6em;
+        gap: 0.6em;
     }
 
     .header li {
@@ -177,7 +189,7 @@ form {
 
     main{
         margin: 1rem;
-        margin-top: 13%;
+        margin-top: 5%;
         padding: 1rem;
     }
     form {
