--- a/styles/register.css
+++ b/styles/register.css
@@ -165,6 +165,12 @@ body {
     border: none;
 }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 .metodoDePago__tarjetaDeDebitoOCredito__numeroDeTarjeta::placeholder {
     color: white;
     opacity: 0.6;
