--- a/styles/register.css
+++ b/styles/register.css
@@ -186,6 +186,10 @@ input[type=number]::-webkit-outer-spin-button {
     border: none;
 }
 
+/* .metodoDePago__tarjetaDeDebitoOCredito__codigoDeSeguridad .validacion-incorecta {
+    border: .1875rem solid red;
+} */
+
 .metodoDePago__tarjetaDeDebitoOCredito__codigoDeSeguridad::placeholder {
     color: white;
     opacity: 0.6;
@@ -256,6 +260,8 @@ input[type=number]::-webkit-outer-spin-button {
     width: 4em;
     height: 1.3em;
 }
+
+
 
 /* Medias Queries */
 
