--- a/styles/register.css
+++ b/styles/register.css
@@ -115,7 +115,7 @@ body {
     position: relative;
 }
 
-.formulario .datosDeUsuario input {
+.form-datos {
     width: 25em;
     height: 3em;
     border-radius: 0.5em;
@@ -125,7 +125,7 @@ body {
     border: none;
 }
 
-.formulario .datosDeUsuario input::placeholder {
+.form-datos::placeholder {
     color: white;
     opacity: 0.6;
 }
@@ -186,9 +186,15 @@ input[type=number]::-webkit-outer-spin-button {
     border: none;
 }
 
-/* .metodoDePago__tarjetaDeDebitoOCredito__codigoDeSeguridad .validacion-incorecta {
-    border: .1875rem solid red;
-} */
+.codigoDeSeguridad-incorrecto {
+    display: none;
+    color: rgb(228, 19, 19);
+    font-size: 1.1em;
+    width: fit-content;
+    position: relative;
+    left: 3.3em;
+    bottom: 1.2em;
+}
 
 .metodoDePago__tarjetaDeDebitoOCredito__codigoDeSeguridad::placeholder {
     color: white;
@@ -256,12 +262,22 @@ input[type=number]::-webkit-outer-spin-button {
 
 /* Botones de confirmacion o cancelar */
 
+/* Validaciones */
+
+.validacion-incorrecta {
+    border: .25rem solid red;
+}
+
+.validacion-correcta {
+    border: .25rem solid green;
+}
+
+/* Validaciones */
+
 .radio {
     width: 4em;
     height: 1.3em;
 }
-
-
 
 /* Medias Queries */
 
@@ -339,11 +355,11 @@ input[type=number]::-webkit-outer-spin-button {
         align-items: center;
     }
 
-    .formulario .datosDeUsuario input {
+    .form-datos {
         height: 4em;
     }
 
-    .formulario .datosDeUsuario input::placeholder {
+    .form-datos::placeholder {
         font-size: 1.3em;
     }
 
@@ -496,11 +512,11 @@ input[type=number]::-webkit-outer-spin-button {
         align-items: center;
     }
 
-    .formulario .datosDeUsuario input {
+    .form-datos {
         height: 4em;
     }
 
-    .formulario .datosDeUsuario input::placeholder {
+    .form-datos::placeholder {
         font-size: 1.3em;
     }
 
@@ -656,11 +672,11 @@ input[type=number]::-webkit-outer-spin-button {
         justify-content: space-around;
     }
 
-    .formulario .datosDeUsuario input {
+    .form-datos {
         height: 4em;
     }
 
-    .formulario .datosDeUsuario input::placeholder {
+    .form-datos::placeholder {
         font-size: 1.3em;
     }
 
