--- a/styles/register.css
+++ b/styles/register.css
@@ -282,6 +282,11 @@ input[type=number]::-webkit-outer-spin-button {
     bottom: 1.2em; */
 }
 
+.validaciones {
+    display: flex;
+    flex-direction: column;
+}
+
 /* Validaciones */
 
 .radio {
