--- a/styles/info-series.css
+++ b/styles/info-series.css
@@ -237,7 +237,7 @@ main {
   position: relative;
   display: flex;
   align-items: center;
-  width: fit-content;
+  width: 40rem;
   height: 304px;
   padding: 10px 0px;
   margin: 0px auto;
