terminar la validacion del formulario

--- a/styles/register.css
+++ b/styles/register.css
@@ -276,6 +276,14 @@ input[type=number]::-webkit-outer-spin-button {
     width: fit-content;
 }
 
+.cupon-incorrecto {
+    display: none;
+    color: rgb(228, 19, 19);
+    font-size: 1.1em;
+    width: fit-content;
+}
+
+
 .validaciones {
     display: flex;
     flex-direction: column;
