--- a/styles/register.css
+++ b/styles/register.css
@@ -309,9 +309,11 @@ input[type=number]::-webkit-outer-spin-button {
     flex-direction: column;
 }
 
-.formulario-invalido {
-    color: red;
-    text-align: center;
+.seleccioneDeMetodoDePago {
+    display: none;
+    color: rgb(228, 19, 19);
+    font-size: 1.1em;
+    width: fit-content;
 }
 
 /* Validaciones */
