--- a/styles/register.css
+++ b/styles/register.css
@@ -316,6 +316,10 @@ input[type=number]::-webkit-outer-spin-button {
     width: fit-content;
 }
 
+.message-error {
+    width: 25em;
+}
+
 /* Validaciones */
 
 .radio {
