--- a/styles/recuperar__contra.css
+++ b/styles/recuperar__contra.css
@@ -186,3 +186,19 @@ main {
         font-size: 0.9rem;
     }
 }
+
+a {
+    color: white;
+}
+
+
+button:disabled {
+  background-color: #444;   
+  color: #888;              
+  cursor: not-allowed;
+  opacity: 0.6;
+}
+
+input {
+    color: white;
+}
