--- a/styles/usuario.css
+++ b/styles/usuario.css
@@ -79,7 +79,7 @@ form {
     grid-template-rows: auto;
 }
 
-.acionesFormulario {
+.accionesFormulario {
     grid-column: 1 / -1; 
     grid-column-start: 2;
     grid-column-end: 4;
@@ -165,7 +165,7 @@ form {
         grid-column-start: auto;
     }
 
-    .acionesFormulario {
+    .accionesFormulario {
         grid-column: 1 / -1;
     }
     footer{
@@ -231,7 +231,7 @@ form {
         grid-column-start: auto;
     }
 
-    .acionesFormulario {
+    .accionesFormulario {
         grid-column: 1 / -1;
     }
     .metodoDePago_tarjetaDeDebitoOCredito_codigoDeSeguridad{
