--- a/styles/register.css
+++ b/styles/register.css
@@ -266,6 +266,10 @@ input[type=number]::-webkit-outer-spin-button {
 
 /* Validaciones */
 
+.seleccion-plan {
+    border: .1875rem solid white;
+}
+
 .validacion-incorrecta {
     border: .25rem solid red;
 }
